fix: creating templates with the right status
